<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="isLoading"
            type="boolean" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        tools:context=".appAuthentication.ui.login.EmailVerificationFrag">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

        <ImageView
            android:id="@+id/email_unverified_iv"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_round_email_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/prompt_email" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/unverified_email_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/email_verfication_promt"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_unverified_iv" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/app_verf_resend_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/colorAccent"
            android:padding="5dp"
            android:text="@string/resend_email_verification_text"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/unverified_email_tv" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/email_verf_sign_out_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:padding="5dp"
            android:text="@string/logout_text"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="@id/app_verf_resend_btn"
            app:layout_constraintStart_toStartOf="@id/app_verf_resend_btn"
            app:layout_constraintTop_toBottomOf="@id/app_verf_resend_btn" />

        <androidx.core.widget.ContentLoadingProgressBar
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{isLoading?View.VISIBLE:View.GONE}"
            app:layout_constraintBottom_toBottomOf="@id/email_verf_sign_out_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/app_verf_resend_btn" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/group2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{isLoading?View.INVISIBLE:View.VISIBLE}"
                app:constraint_referenced_ids="app_verf_resend_btn,email_verf_sign_out_btn,verify_email_verification_btn" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:id="@+id/email_frag_click_below_tv"
            android:text="@string/email_verfication_another"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/unverified_email_tv"
            app:layout_constraintEnd_toEndOf="@id/unverified_email_tv"
            app:layout_constraintTop_toBottomOf="@id/email_verf_sign_out_btn"
            android:layout_marginTop="5dp"
            />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/verify_email_verification_btn"
            android:backgroundTint="@color/colorAccent"
            android:padding="5dp"
            android:text="@string/verify_promt"
            android:textColor="@android:color/black"
            android:layout_margin="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_frag_click_below_tv"
            />

</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>